--- a/chrome-extension/src/app/components/Search.less
+++ b/chrome-extension/src/app/components/Search.less
@@ -35,5 +35,12 @@
       position: relative;
     }
   }
+
+  .notes-wrapper {
+    padding: 4px 12px;
+    background: #f7f7f7;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
+  }
 }
 
