rename: comments -> notes

--- a/chrome-extension/src/styles.less
+++ b/chrome-extension/src/styles.less
@@ -96,7 +96,7 @@
   }
 }
 
-.notelix-comments-inline {
+.notelix-notes-inline {
   display: inline-block;
   position: relative;
   vertical-align: bottom;
