--- a/chrome-extension/src/styles.less
+++ b/chrome-extension/src/styles.less
@@ -153,10 +153,10 @@
   & > div {
     padding: 20px;
     backdrop-filter: blur(5px);
-    background: #FFFFFFBB;
+    background-color: #FFFFFFBB !important;
     box-shadow: 0 0 4px #00000055;
     border-radius: 4px;
     font-size: 16px;
-    color: black;
+    color: black !important;
   }
 }
