--- a/chrome-extension/src/styles.less
+++ b/chrome-extension/src/styles.less
@@ -107,11 +107,10 @@
 
   .comments-svg {
     svg {
-      box-sizing: content-box;
+      box-sizing: content-box!important;
       opacity: .5;
       width: 0.8em;
       padding: 0 0.35em;
-      vertical-align: -0.05em;
       fill: #000000;
 
       &:hover {
