--- a/chrome-extension/src/styles.less
+++ b/chrome-extension/src/styles.less
@@ -121,30 +121,27 @@
   display: inline-block;
   position: relative;
   vertical-align: bottom;
-  margin-top: calc(1em + 10px);
+  margin-top: calc(1em + 11px);
   cursor: pointer;
   filter: brightness(1);
   transition: all 0.15s ease-in-out;
 
   .comments-svg {
+    vertical-align: text-bottom;
+    position: relative;
+    top: 1px;
+
     svg {
-      box-sizing: content-box!important;
-      opacity: .5;
+      box-sizing: content-box !important;
       width: 0.8em;
-      padding: 0 0.35em;
+      padding: 0 0.2em 0 0.35em;
       fill: #000000;
-
-      &:hover {
-        opacity: 1;
-      }
+      transition: all 0.2s ease-in-out;
     }
-  }
 
-  &.dark-reader-enabled {
-    .comments-svg {
+    &:hover {
       svg {
-        fill: #FFFFFF;
-        background-color: transparent !important;
+        transform: scale(1.15);
       }
     }
   }
@@ -158,7 +155,7 @@
     padding: 4px 8px;
     position: absolute;
     z-index: 1;
-    top: calc(-1em - 12px);
+    top: calc(-1em - 14px);
     left: 0;
     border-radius: 2px;
     font-size: 11px;
@@ -173,7 +170,7 @@
     height: 10px;
     transform: rotate(45deg);
     position: absolute;
-    top: -10px;
+    top: -12px;
 
     z-index: 0;
     left: 6px;
