--- a/chrome-extension/src/styles.less
+++ b/chrome-extension/src/styles.less
@@ -127,14 +127,13 @@
   transition: all 0.15s ease-in-out;
 
   .comments-svg {
-    vertical-align: text-bottom;
     position: relative;
-    top: 1px;
+    top: 0.4px;
 
     svg {
       box-sizing: content-box !important;
       width: 0.8em;
-      padding: 0 0.2em 0 0.35em;
+      padding: 0 2px 0 4px;
       fill: #000000;
       transition: all 0.2s ease-in-out;
     }
@@ -156,7 +155,7 @@
     padding: 4px 8px;
     position: absolute;
     z-index: 1;
-    top: calc(-1em - 14px);
+    top: calc(-1em - 11px);
     left: 0;
     border-radius: 2px;
     font-size: 11px;
@@ -171,7 +170,7 @@
     height: 10px;
     transform: rotate(45deg);
     position: absolute;
-    top: -12px;
+    top: -9px;
 
     z-index: 0;
     left: 6px;
