collect web page `title` in annotation

--- a/chrome-extension/src/app/components/Search.less
+++ b/chrome-extension/src/app/components/Search.less
@@ -34,6 +34,11 @@
       top: -1px;
       position: relative;
     }
+
+    .title {
+      margin-right: 6px;
+      font-weight: bold;
+    }
   }
 
   .notes-wrapper {
