support deleting annotation in App

--- a/chrome-extension/src/app/components/Search.less
+++ b/chrome-extension/src/app/components/Search.less
@@ -42,6 +42,14 @@
       .hit {
         padding: 6px 10px;
         border-bottom: 1px solid #DDD;
+        position: relative;
+
+        .delete-button {
+          position: absolute;
+          right: 6px;
+          bottom: 18px;
+          font-size: 12px;
+        }
 
         .url {
           font-size: 12px;
