--- a/chrome-extension/src/app/components/AnnotationsExplorer.less
+++ b/chrome-extension/src/app/components/AnnotationsExplorer.less
@@ -9,6 +9,7 @@
     .column {
       margin: 0 2px;
       border-right: 1px solid #DDDDDD;
+      overflow-y: auto;
 
       &:last-of-type {
         border-right: none;
